# pokefetch

./: .gitignore  GEMINI.md  README.md  pokefetch.py  pyproject.toml  requirements.txt
.agent/workflows/: install.md
src/pokefetch/: main.py
src/pokefetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_main.py
tests/fixtures/: pikachu_full.html  pikachu_partial.html
