[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokefetch"
version = "1.0.0"
description = "Display pokemon info in neofetch style"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pokemon",
    "requests",
    "beautifulsoup4",
    "term-image",
    "pillow"
]
license = {text = "MIT"}
authors = [
    {name = "Cammy", email = "cammy@example.com"}
]

[project.scripts]
pokefetch = "pokefetch.main:main"

[project.urls]
Homepage = "https://github.com/example/pokefetch"
